@@ -1,4 +1,5 @@
 from itertools import groupby
+from operator import itemgetter
 
 from django import forms
 from django.conf import settings
@@ -12,7 +13,8 @@ from django.template.loader import render_to_string
 from django.utils.html import mark_safe
 from django.utils.translation import ugettext_lazy as _
 
-from wagtail.admin.utils import get_available_admin_languages
+import l18n
+from wagtail.admin.utils import get_available_admin_languages, get_available_admin_time_zones
 from wagtail.admin.widgets import AdminPageChooser
 from wagtail.core import hooks
 from wagtail.core.models import (
@@ -399,3 +401,20 @@ class EmailForm(forms.ModelForm):
     class Meta:
         model = User
         fields = ("email", )
+
+
+class CurrentTimeZoneForm(forms.ModelForm):
+    def _get_time_zone_choices():
+        time_zones = [(tz, str(l18n.tz_fullnames.get(tz, tz)))
+                      for tz in get_available_admin_time_zones()]
+        time_zones.sort(key=itemgetter(1))
+        return BLANK_CHOICE_DASH + time_zones
+
+    current_time_zone = forms.ChoiceField(
+        required=False,
+        choices=_get_time_zone_choices
+    )
+
+    class Meta:
+        model = UserProfile
+        fields = ("current_time_zone",)
