@@ -6,6 +6,7 @@ Changelog
 
  * Add `HelpPanel` to add HTML within an edit form (Keving Chung)
  * Added API endpoint for finding pages by HTML path (Karl Hobley)
+ * Added time zone setting to account preferences (David Moore)
  * Persist tab hash in URL to allow direct navigation to tabs in the admin interface (Ben Weatherman)
  * Animate the chevron icon when opening sub-menus in the admin (Carlo Ascani)
  * Look through the target link and target page slug (in addition to the old slug) when searching for redirects in the admin (Michael Harrison)
